<resources>
    <string name="app_name">Entrevoisins</string>
    <string name="tab_neighbour_title">My neighbours</string>
    <string name="tab_favorites_title">Favorites</string>
    <string name="activity_new_neighbour">New neighbour</string>
    <string name="about_me">A propos de moi</string>
    <string name="add_to_favorites">Ajouté(e) aux favoris !</string>
    <string name="remove_from_favorites">Retiré(e) des favoris !</string>
    <string name="social_text">www.facebook.fr/</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
