<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_neighbour"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context=".ui.neighbour_list.activities.NeighbourDetailsActivity">

...
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ToolbarTheme"
        tools:ignore="MissingConstraints" />

    <!--Neighbour name-->
    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="24dp"
        android:textColor="@color/colorWhite"
        android:textSize="32sp"
...
